# icebergsim-integrity

./: .gitignore  CAMINO-2.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION-LD.md  README.md  SOP-DATA.md  pyproject.toml
.github/workflows/: constitutional.yml
seals/: ANC-SEAL.md  SEAL-IST.md
sessions/: SESSION-0-SPIKE-B5.md
shelved/: INTENT.md  PHOENIX-PORT-PROMPT.md
src/icebergsim_integrity/: __init__.py  schema.py  seedkernel.py  vocabulary.py
tests/constitutional/: test_forbidden_vocabulary.py  test_manifests.py  test_output_schema.py  test_seed_kernel_freeze.py
tests/kernel/: test_seedkernel.py
